--- a/templates/adminDashBoard.html
+++ b/templates/adminDashBoard.html
@@ -265,7 +265,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index">Quản Lý Tài Khoản</a>
+                                    <a href="./manageAccounts">Quản Lý Tài Khoản</a>
                                 </li>
                                 <li>
                                     <a href="basic-table.html">Quản Lý Danh Mục</a>
@@ -293,7 +293,7 @@
                                     <a href="chartist.html">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="chartjs.html">Topic</a>
+                                    <a href="./managetopic">Topic</a>
                                 </li>
                             </ul>
                         </li>
