--- a/templates/product.html
+++ b/templates/product.html
@@ -56,7 +56,12 @@
                   </li> 
                   <li class="nav-item">
                     <a class="nav-link" href="./signup">Sign up</a>
-                  </li> 
+                  </li>
+                  {%if username%}
+                  <li class="nav-item">
+                    <a class="nav-link" href="./signup">{{username}}</a>
+                  </li>
+                  {%endif%}
                 </ul>
                   
             </nav>
