--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -56,13 +56,17 @@
                   </li> 
                   <li class="nav-item">
                     <a class="nav-link" href="./signup">Sign up</a>
-                  </li> 
+                  </li>
+                  {%if username%}
+                  <li class="nav-item">
+                    <a class="nav-link" href="./signup">{{username}}</a>
+                  </li>
+                  {%endif%}
                 </ul>
                   
             </nav>
         </div>
     </section>
-
     <main class="main-content">
         {% if product %}
             <form method = "post">
