--- a/templates/adminDashBoard.html
+++ b/templates/adminDashBoard.html
@@ -228,10 +228,10 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li>
-                                            <a href="app-project-list.html">Nông Sản</a>
+                                            <a href="../manageProducts/Seeds">Nông Sản</a>
                                         </li>
                                         <li>
-                                            <a href="app-project-details.html">Thuốc</a>
+                                            <a href="../manageProducts/Medicine">Thuốc</a>
                                         </li>
                                     </ul>
                                 </li>
